--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\LuaFramework\ToLua\Editor\ToLuaExport.cs" />
      <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_Delegate.cs" />
      <Compile Include="Assets\Editor\ResConfigEditor.cs" />
+     <Compile Include="Assets\Editor\Build\BuildUpdateZip.cs" />
     <Reference Include="UnityEngine">
         <HintPath>F:/Unity2019/Editor/2021.1.9f1c1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -335,6 +336,9 @@
     </Reference>
     <Reference Include="unityplastic">
         <HintPath>E:/GitHub/UnityXFramework/Library/PackageCache/com.unity.collab-proxy@1.5.7/Lib/Editor/PlasticSCM/unityplastic.dll</HintPath>
+    </Reference>
+    <Reference Include="Ionic.Zip.Unity">
+        <HintPath>E:/GitHub/UnityXFramework/Assets/Plugins/Ionic.Zip.Unity.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
         <HintPath>E:/GitHub/UnityXFramework/Library/PackageCache/com.unity.ext.nunit@1.0.6/net35/unity-custom/nunit.framework.dll</HintPath>
