--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -947,6 +947,9 @@
     <Reference Include="Unity.VisualScripting.Core">
         <HintPath>E:/GitHub/UnityXFramework/Library/ScriptAssemblies/Unity.VisualScripting.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.2D.Sprite.Editor">
+        <HintPath>E:/GitHub/UnityXFramework/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
