--- a/UnityEditor.UI.EditorTests.csproj
+++ b/UnityEditor.UI.EditorTests.csproj
@@ -12,11 +12,11 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{e5d54671-6768-3321-cc6e-9f3f7b60ff16}</ProjectGuid>
+    <ProjectGuid>{7abf8c82-7ae3-4696-66ad-5c5772c1ac0a}</ProjectGuid>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>UnityEditor.UI.EditorTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -25,7 +25,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Temp\Bin\Debug\Assembly-CSharp-Editor\</OutputPath>
+    <OutputPath>Temp\Bin\Debug\UnityEditor.UI.EditorTests\</OutputPath>
     <DefineConstants>UNITY_2021_3_8;UNITY_2021_3;UNITY_2021;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;UNITY_2021_1_OR_NEWER;UNITY_2021_2_OR_NEWER;UNITY_2021_3_OR_NEWER;UNITY_INCLUDE_TESTS;USE_SEARCH_ENGINE_API;USE_SEARCH_TABLE;USE_SEARCH_MODULE;USE_PROPERTY_DATABASE;USE_SEARCH_EXTENSION_API;SCENE_TEMPLATE_MODULE;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_NATIVE_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;ENABLE_RUNTIME_PERMISSIONS;ENABLE_ENGINE_CODE_STRIPPING;ENABLE_ONSCREEN_KEYBOARD;ENABLE_MANAGED_UNITYTLS;INCLUDE_DYNAMIC_GI;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;ENABLE_VIDEO;ENABLE_ACCELERATOR_CLIENT_DEBUGGING;PLATFORM_ANDROID;TEXTCORE_1_0_OR_NEWER;UNITY_ANDROID;UNITY_ANDROID_API;ENABLE_EGL;ENABLE_NETWORK;ENABLE_RUNTIME_GI;ENABLE_CRUNCH_TEXTURE_COMPRESSION;UNITY_CAN_SHOW_SPLASH_SCREEN;UNITY_HAS_GOOGLEVR;UNITY_HAS_TANGO;ENABLE_SPATIALTRACKING;ENABLE_ETC_COMPRESSION;PLATFORM_EXTENDS_VULKAN_DEVICE;PLATFORM_HAS_MULTIPLE_SWAPCHAINS;UNITY_ANDROID_SUPPORTS_SHADOWFILES;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;ENABLE_MONO;NET_4_6;NET_UNITY_4_8;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -41,41 +41,23 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_Object.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_Type.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_LuaInterface_EventObject.cs" />
-     <Compile Include="Assets\Editor\Build\BuildAssetBundle.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_UnityEngine_Input.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_LuaInterface_LuaMethod.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_String.cs" />
-     <Compile Include="Assets\LuaFramework\Editor\CustomSettings.cs" />
-     <Compile Include="Assets\Editor\Build\BuildUpdateZip.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_Holoville_HOTween_HOTween.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_Enum.cs" />
-     <Compile Include="Assets\LuaFramework\Editor\Packager.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\ToLuaTree.cs" />
-     <Compile Include="Assets\Editor\SpriteAtlas\SpriteAtlasTools.cs" />
-     <Compile Include="Assets\Editor\MirrorImage\MirrorImageMenu.cs" />
-     <Compile Include="Assets\Editor\Build\BuildUtils.cs" />
-     <Compile Include="Assets\Editor\Common\EdtUtil.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\ToLuaMenu.cs" />
-     <Compile Include="Assets\Editor\Version\VersionGUI.cs" />
-     <Compile Include="Assets\Editor\Common\EditorStyleDef.cs" />
-     <Compile Include="Assets\Editor\PrefabBinder\PrefabBinderEditor.cs" />
-     <Compile Include="Assets\Editor\I18NText\I18NTextInspector.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_UnityEngine_Object.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_LuaInterface_LuaField.cs" />
-     <Compile Include="Assets\Editor\PrefabBinder\PrefabBinderInspector.cs" />
-     <Compile Include="Assets\Editor\I18NText\I18NTextMenu.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_UnityEngine_GameObject.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\ToLuaExport.cs" />
-     <Compile Include="Assets\Editor\MirrorImage\MirrorImageInspector.cs" />
-     <Compile Include="Assets\Editor\Common\FastOpenTools.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_LuaInterface_LuaProperty.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_System_Delegate.cs" />
-     <Compile Include="Assets\LuaFramework\ToLua\Editor\Extend\ToLua_LuaInterface_LuaConstructor.cs" />
-     <Compile Include="Assets\Editor\ResConfig\ResConfigEditor.cs" />
-     <Compile Include="Assets\Editor\Build\BuildApp.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Text\FontCreatedByScript.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\EventSystem\InterceptedEventsPreviewTests.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\UnityEvent\UnityEventInvoke.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\CanvasRenderer\ParentCanvasIsSane.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Canvas\CanvasWidthAssertionErrorWithRectTransform.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\InputField\ContentValidation.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\RectMask2D\RectTransformPosition.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Canvas\AssertionFailureOnOutputVertexCount.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\RectMask2D\RectMask2DCulling.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\CanvasRenderer\ChangingHierarchyOfCanvasRenderer.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\InputField\CharacterLimitValidation.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Slider\SliderRectReferences.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Canvas\UISystemProfilerAddMarkerWithNullObjectDoesNotCrash.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Canvas\RootCanvasTests.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\TestBehaviourBase.cs" />
+     <Compile Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\Canvas\CanvasElementsMaintainValidPositionsWhenCameraOrthoSizeIsZero.cs" />
+     <None Include="Packages\com.unity.ugui@1.0.0\Tests\Editor\UnityEditor.UI.EditorTests.asmdef" />
      <Reference Include="UnityEngine">
      <HintPath>C:\UnityInstall\2021.3.8f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
      </Reference>
@@ -330,45 +312,6 @@
      </Reference>
      <Reference Include="UnityEditor.WindowsStandalone.Extensions">
      <HintPath>C:\UnityInstall\2021.3.8f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
-     </Reference>
-     <Reference Include="HOTweenV1_Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Assets\Plugins\HOTween\Editor\HOTweenV1_Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.YamlDotNet">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.visualscripting@1.7.8\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.IonicZip">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.visualscripting@1.7.8\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
-     </Reference>
-     <Reference Include="Ionic.Zip.Unity">
-     <HintPath>E:\GitHub\UnityXFramework\Assets\Plugins\Ionic.Zip.Unity.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.visualscripting@1.7.8\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
-     </Reference>
-     <Reference Include="Debugger">
-     <HintPath>E:\GitHub\UnityXFramework\Assets\Plugins\Debugger.dll</HintPath>
-     </Reference>
-     <Reference Include="Newtonsoft.Json">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.nuget.newtonsoft-json@3.0.2\Runtime\Newtonsoft.Json.dll</HintPath>
-     </Reference>
-     <Reference Include="HOTween">
-     <HintPath>E:\GitHub\UnityXFramework\Assets\Plugins\HOTween\HOTween.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Plastic.Antlr3.Runtime">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.collab-proxy@1.17.1\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-     </Reference>
-     <Reference Include="log4netPlastic">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.collab-proxy@1.17.1\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
-     </Reference>
-     <Reference Include="unityplastic">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.collab-proxy@1.17.1\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.TextureAssets">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.visualscripting@1.7.8\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Plastic.Newtonsoft.Json">
-     <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.collab-proxy@1.17.1\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
      </Reference>
      <Reference Include="nunit.framework">
      <HintPath>E:\GitHub\UnityXFramework\Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
@@ -754,78 +697,14 @@
      <Reference Include="System.Xml.XPath.XDocument">
      <HintPath>C:\UnityInstall\2021.3.8f1\Editor\Data\UnityReferenceAssemblies\unity-4.8-api\Facades\System.Xml.XPath.XDocument.dll</HintPath>
      </Reference>
-     <Reference Include="UnityEditor.TestRunner">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\UnityEditor.TestRunner.dll</HintPath>
-     </Reference>
      <Reference Include="UnityEngine.TestRunner">
      <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\UnityEngine.TestRunner.dll</HintPath>
      </Reference>
-     <Reference Include="Unity.VisualScripting.Flow.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VSCode.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.TextMeshPro.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.Core.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.TextMeshPro">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.State.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.Flow">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.State">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.Core">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Rider.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.PlasticSCM.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Timeline">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Timeline.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualStudio.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.VisualScripting.Shared.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.EditorCoroutines.Editor">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Services.Core.Analytics">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Services.Core.Analytics.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Services.Core">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Services.Core.dll</HintPath>
-     </Reference>
-     <Reference Include="Unity.Services.Core.Environments">
-     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\Unity.Services.Core.Environments.dll</HintPath>
+     <Reference Include="UnityEditor.TestRunner">
+     <HintPath>E:\GitHub\UnityXFramework\Library\ScriptAssemblies\UnityEditor.TestRunner.dll</HintPath>
      </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{bb0cfefa-00de-ee6b-39eb-970fb01c8cd6}</Project>
-      <Name>Assembly-CSharp</Name>
-    </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
       <Project>{145c3cf5-4dd4-16a6-6264-205e6e4504be}</Project>
       <Name>UnityEditor.UI</Name>
